--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "mustache": "^3.1.0",
-    "mustache-express": "^1.3.0"
+    "mustache-express": "^1.3.0",
+    "package.json": "^2.0.1",
+    "puppeteer": "^24.10.1",
+    "qrcode": "^1.5.4"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
